[tool.poetry]
name = "ermes-backend-test"
version = "0.0.1"
description = "Ermes Backend Test"
authors = ["Giuseppe Gabbia <beppegabbia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.89.1"
uvicorn = "0.13.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "5.5"
bandit = "1.6.2"
pylint = "2.5.2"
black = "20.8b1"
isort = "4.3.21"
pytest-cov = "2.11.1"
pymongo = "4.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"